# SE3_Interpolation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
3rd/include/spdlog/details/: udp_client.h
3rd/lib/: libspdlog.so.1.12.0
include/: SE3InterpolationBezier.h  SE3InterpolationInterface.h  SE3InterpolationSlerp.h  SE3InterpolationSquad.h  SE3TrajectoryInterpolator.h  enumUtils.h  lieGroupUtils.h  rigidBodyMotion.h
src/: CMakeLists.txt  SE3InterpolationBezier.cpp  SE3InterpolationSlerp.cpp  SE3InterpolationSquad.cpp  SE3TrajectoryInterpolator.cpp  lieGroupUtils.cpp  rigidBodyMotion.cpp
